--- a/SolarBug.html
+++ b/SolarBug.html
@@ -1,14 +1,11 @@
 <html>
-<head><title>Solar Bugs</title></head>
-<frameset rows="20%,">
-<frame src="frame1.html">
-<frameset cols="15%,80%,15%">
-<frame src="frame2.html">
-<frame src="frame3.html">
-<frame src="frame4.html">
-  </framset>
-  </frameset>
-  
-<head1><title1>Frame1</title1></head1>
-<body bgcolor="black">
+<style>
+h1 {
+    text-align: center;
+    }
+</style> 
+<h1>Laura Frye</h1>
+<p>Hi! I am learning how to make my very own web page! I relly like blueberry muffins and long walks on the beach.</p>
+<input type="email" Placeholder="Email">
+<input type="submit"> 
 </html>
